--- a/versions.properties
+++ b/versions.properties
@@ -14,6 +14,8 @@ version.junit.jupiter=5.11.1
 
 version.mockito=5.14.1
 
+version.mysql..mysql-connector-java=8.0.33
+
 version.org.jetbrains..annotations=25.0.0
 
 version.org.junit.platform..junit-platform-commons=1.11.1
