testcontainers 의존성 추가

--- a/versions.properties
+++ b/versions.properties
@@ -22,3 +22,5 @@ version.org.junit.platform..junit-platform-commons=1.11.1
 
 ## unused
 version.org.springframework.boot..spring-boot-gradle-plugin=3.3.4
+
+version.org.testcontainers..testcontainers-bom=1.20.2
