--- a/versions.properties
+++ b/versions.properties
@@ -7,6 +7,8 @@
 #### suppress inspection "SpellCheckingInspection" for whole file
 #### suppress inspection "UnusedProperty" for whole file
 
+version.com.tngtech.archunit..archunit-junit5=1.3.0
+
 ## unused
 version.io.spring.gradle..dependency-management-plugin=1.1.6
 
