--- a/inventory/docker-compose.yml
+++ b/inventory/docker-compose.yml
@@ -9,3 +9,7 @@ services:
       - '3306:3306'
     volumes:
       - ./db_data:/var/lib/mysql
+  redis:
+    image: redis:7.2
+    ports:
+      - '6379:6379'
