--- a/inventory/src/main/resources/application-local.yml
+++ b/inventory/src/main/resources/application-local.yml
@@ -11,5 +11,5 @@ spring:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.MySQLDialect
-        show_sql: true
-    show-sql: true
+#        show_sql: true
+#    show-sql: true
