--- a/versions.properties
+++ b/versions.properties
@@ -22,6 +22,8 @@ version.org.jetbrains..annotations=25.0.0
 
 version.org.junit.platform..junit-platform-commons=1.11.1
 
+version.org.sonarsource.scanner.gradle..sonarqube-gradle-plugin=5.1.0.4882
+
 ## unused
 version.org.springframework.boot..spring-boot-gradle-plugin=3.3.4
 
